# icu

./: BUILD.gn  LICENSE  OWNERS  README.chromium  README.fuchsia  config.gni  data.json  groups  icu.gni  icu.gyp  icu.gypi  icu_data.gni  icu_data_android.gni  icu_data_cast.gni  icu_data_chromeos.gni  icu_data_ios.gni  icu_data_shared_cast_android.gni  icu_tools.gni  project.config  sources.gni  system.gni  version.json
android/: patch_locale.sh  remove_collation_data.sh  restore_collation_data.sh
android/system_collation/: README  collator.cpp  collator.h  logging.cpp  logging.h  system_collation.cpp  system_collation.h  system_collation_entries.h  system_collation_for_tests.cpp  system_collation_wrappers.h  system_icu_loader.cpp  system_icu_loader.h
build_tools/: filter_curr.py  filter_data_for_size.py  filter_data_for_size_unittest.py  filter_langs.py  filter_regions.py  filter_units.py  filter_util.py  generate_data_config.py  optimize_pool_res.py  parse_res_source.py  parse_res_source_unittest.py  run_without_cygwin.py  write_icupkg_inc.py  write_res_index.py
build_tools/obsolete/: filter_data_for_size.py
build_tools/work_in_progress/: filter_coll.py  filter_curr.py  filter_langs.py  filter_locales.py  filter_regions.py  filter_units.py  filter_util.py  filter_zones.py  parse_res_source.py
cast/: brkitr.patch  cast-removed-resources.txt  patch_locale.sh
chromeos/: icudtl.dat.hash
common/: cjdict.txt
data_build/: BUILD.gn
data_build/build_tools/: filter_brkitr.py  filter_coll.py  filter_locales.py  filter_regions.py  filter_units.py  filter_util.py  filter_zones.py  optimize_pool_res.py
filter/: common_filter.json  desktop_filter.json
filters/: android-extra-removed-resources.txt  android.json  android_extra.json  android_small.json  cast.json  chromecast_video.json  chromeos.json  common.json  flutter.json  flutter_desktop.json  ios.json
filters/substitutions/: brkitr_ja_mobile.txt  word_mobile.txt
flutter/: README.md  brkitr.patch  flutter-removed-resources.txt
fuchsia/: README.md
fuzzers/: BUILD.gn  fuzzer_utils.h  icu_appendable_fuzzer.cc  icu_collator_compare_fuzzer.cc  icu_date_format_fuzzer.cc  icu_fuzzer_common.cc  icu_fuzzer_common.h  icu_number_format_locale_fuzzer.cc  icu_to_case_fuzzer.cc  icu_uregex_match_fuzzer.cc  intl-objects.cc  intl-objects.h
gn_data_build_system/: BUILD.gn  rm.py  run.py
gn_tool_build_system/: BUILD.gn
patches/: ardatepattern.patch  atomic_template_instantiation.patch  buildrules_import.patch  calendar.patch  configure.patch  cxx20.patch  data_symb.patch  doubleconvert-hasattribute.patch  fix-bool-mix-use.patch  fix-bool-warning.patch  getPropertyValue.patch  include_cstdlib.patch  iso2022jp.patch  khmer-dictbe.patch  loc_keyvalue.patch  locale1.patch  locale_google.patch  localematcher.patch  locid_map.patch  measunit_impl_move-template.patch  number_output.patch  revert_realpath.patch  simplify_smallintformatter.patch  system_collation.patch  timezone.patch  turnOffNewCodeInLocaleCanonical.patch  tz_dupetime.patch  tzdbname.patch  tzenv.patch  unistr_compiler_warning.patch  unsigned_compiler_warnings.patch  use_pool.patch  vscomp.patch  wordbrk.patch  wpo.patch
scripts/: accept_lang.list  big5_gen.sh  config_data.sh  copy_data.sh  data_files_to_preserve.txt  diff_data.sh  diff_data_all.sh  diff_res.sh  eucjp_gen.sh  euckr_gen.sh  icualign.py  icuhash.py  make_data_all.sh  make_data_assembly.py  make_data_c.py  make_data_cpp.py  single_byte_gen.sh  sjis_gen.sh  trim_data.sh  trim_exemplar_cities.sh  trim_unit_data.sh  update.sh  update_tz.sh
source/: configure  configure.ac
source/common/: characterproperties.cpp  locid.cpp  locmap.cpp  putil.cpp  putilimp.h  ucnv2022.cpp  ucurr.cpp  udata.cpp  uloc.cpp  uloc_tag.cpp  umutablecptrie.cpp  uniset_props.cpp  uts46.cpp
source/common/unicode/: platform.h  uconfig.h  unistr.h  uset.h  utypes.h
source/data/: BUILDRULES.py
source/data/brkitr/: brklocal.mk  ja.txt  ja.txt.orig  root.txt  zh.txt  zh_Hant.txt
source/data/buildtool/: filtration_schema.json
source/data/coll/: zh.txt
source/data/curr/: af.txt  am.txt  ar.txt  ar_DJ.txt  ar_ER.txt  ar_KM.txt  ar_LB.txt  ar_SO.txt  as.txt  ast.txt  az.txt  az_Cyrl.txt  be.txt  bg.txt  bn.txt  br.txt  brx.txt  bs.txt  bs_Cyrl.txt  ca.txt  ccp.txt  ce.txt  ceb.txt  chr.txt  cs.txt  cy.txt  da.txt  de.txt  de_CH.txt  dsb.txt  dz.txt  ee.txt  el.txt  en.txt  en_001.txt  en_AU.txt  en_IN.txt  es.txt  es_419.txt  es_AR.txt  (+134 more)
source/data/lang/: am.txt  ar.txt  ar_SA.txt  as.txt  az_Cyrl.txt  bg.txt  bn.txt  brx.txt  bs_Cyrl.txt  ca.txt  ce.txt  ceb.txt  chr.txt  cs.txt  da.txt  de.txt  de_AT.txt  de_CH.txt  dsb.txt  dz.txt  el.txt  en.txt  en_001.txt  en_AU.txt  en_CA.txt  en_GB.txt  en_IN.txt  en_NZ.txt  es.txt  es_419.txt  es_AR.txt  es_CO.txt  es_MX.txt  es_PY.txt  es_US.txt  es_VE.txt  et.txt  fa.txt  fa_AF.txt  fi.txt  (+78 more)
source/data/locales/: af.txt  agq.txt  am.txt  ar.txt  ar_DZ.txt  ar_LB.txt  ar_LY.txt  ar_MA.txt  ar_MR.txt  ar_SA.txt  ar_SO.txt  ar_TN.txt  as.txt  ast.txt  az.txt  az_Cyrl.txt  bas.txt  be.txt  bg.txt  bn.txt  bo.txt  br.txt  brx.txt  bs.txt  bs_Cyrl.txt  ca.txt  ccp.txt  ce.txt  ceb.txt  chr.txt  ckb.txt  cs.txt  cy.txt  da.txt  de.txt  de_AT.txt  de_CH.txt  de_LI.txt  dje.txt  dsb.txt  (+171 more)
source/data/mappings/: gbk-html.ucm  (+28 more)
source/i18n/: calendar.cpp  chnsecal.cpp  choicfmt.cpp  coll.cpp  collationdatareader.cpp  collationfastlatin.cpp  datefmt.cpp  decimfmt.cpp  dtitvfmt.cpp  format.cpp  formatted_string_builder.cpp  gregoimp.cpp  measfmt.cpp  measunit.cpp  measunit_extra.cpp  measunit_impl.h  measure.cpp  msgfmt.cpp  number_asformat.cpp  number_asformat.h  number_output.cpp  numfmt.cpp  olsontz.cpp  olsontz.h  plurfmt.cpp  rbnf.cpp  rbtz.cpp  reldtfmt.cpp  reldtfmt.h  rulebasedcollator.cpp  selfmt.cpp  simpletz.cpp  smallintformatter.cpp  smpdtfmt.cpp  timezone.cpp  tmutamt.cpp  tzfmt.cpp  tznames_impl.cpp  tzrule.cpp  ucol_sit.cpp  (+1 more)
source/io/: uscanf_p.cpp
source/stubdata/: stubdata.cpp
source/tools/: Makefile.in
tool_build/: BUILD.gn
tzres/: metaZones.res  zoneinfo64.res
(+429 files in other folders)
