# Copyright 2018 The Chromium Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

# Base it on the desktop setup.
import("icu_data.gni")

# Region data is fetched from the Android API on Android. We only need
# en.txt.
icu_region_sources = []
icu_region_sources = [ "source/data/region/en.txt" ]
icu_region_generated = []
icu_region_generated = [ "region/en.res" ]
icu_region_alias_sources = []
icu_region_alias_generated = []

# Too big to include.
icu_brkitr_dict_sources -= [ "source/data/brkitr/cjdict.txt" ]
icu_brkitr_dict_generated -= [ "brkitr/cjdict.dict" ]
has_cjdict = false
# Since we skip cjdict.dict, we need the better word break in word_ja.txt
icu_brkitr_brk_sources += [ "source/data/brkitr/rules/word_ja.txt" ]
icu_brkitr_brk_generated += [ "brkitr/word_ja.brk" ]
# Need to fix brkitr/ja.txt so that it doesn't use cjdict.dict
icu_brkitr_res_sources -= [ "source/data/brkitr/ja.txt" ]
icu_brkitr_res_prefiltered_sources += [ "brkitr/ja.txt" ]
icu_brkitr_res_filtered_sources += [ "brkitr/ja.txt" ]
