# Copyright 2018 The Chromium Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

# Base it on the cast setup which is based on the desktop setup.
import("icu_data_shared_cast_android.gni")

# Region data is fetched from the Android API on Android. According
# to comments in android/patch_locale.sh, a bug in ICU, would cause an
# empty region list to become a 70kB pool.res bundle so we used to
# generate a 5 line region/en.txt to but that doesn't seem to be
# needed anymore, saving even more bytes.
icu_region_prefiltered_sources = []
icu_region_generated = []
icu_region_alias_prefiltered_sources = []

# Too big to include.
icu_brkitr_dict_sources -= [ "source/data/brkitr/cjdict.txt" ]
icu_brkitr_dict_generated -= [ "brkitr/cjdict.dict" ]
has_cjdict = false
# Since we skip cjdict.dict, we need the better word break in word_ja.txt
icu_brkitr_brk_sources += [ "source/data/brkitr/rules/word_ja.txt" ]
icu_brkitr_brk_generated += [ "brkitr/word_ja.brk" ]
# Need to fix brkitr/ja.txt so that it doesn't use cjdict.dict
icu_brkitr_res_sources -= [ "source/data/brkitr/ja.txt" ]
icu_brkitr_res_prefiltered_sources += [ "source/data/brkitr/ja.txt" ]
added_word_ja_to_replace_cjdict = true

# On Android Java API is used to get lang data, except for the language and
# script names for zh_Hans and zh_Hant which are not supported by Java API.
# Here remove all lang data except those names.
# See the comments in GetDisplayNameForLocale() (in Chromium's
# src/ui/base/l10n/l10n_util.cc) about why we need the scripts.
remove_language_names_already_in_android = true
