# Copyright 2018 The Chromium Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

# Base it on the desktop setup.
import("icu_data.gni")

# This is 400 KB so normally it's not included but it's needed in
# Chrome OS.
strip_zone_example_cities = false
